--- a/src/index.html
+++ b/src/index.html
@@ -27,6 +27,10 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Cairo:wght@400;600;700&display=swap"
     />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Rajdhani:wght@300;500;600;700&display=swap"
+    />
   </head>
   <body>
     <noscript> You need to enable JavaScript to run this app. </noscript>
